--- a/app/index.html
+++ b/app/index.html
@@ -17,26 +17,26 @@
   </head>
   <body ng-app="easyHeatApp">
     <!--[if lt IE 7]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+      <!--<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>-->
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="container">
-      <div class="header">
-        <ul class="nav nav-pills pull-right">
-          <li class="active"><a ng-href="#">Home</a></li>
-          <li><a ng-href="#/about">About</a></li>
-          <li><a ng-href="#">Contact</a></li>
-        </ul>
-        <h3 class="text-muted">easyHeat</h3>
-      </div>
+    <!--<div class="container">-->
+      <!--<div class="header">-->
+        <!--<ul class="nav nav-pills pull-right">-->
+          <!--<li class="active"><a ng-href="#">Home</a></li>-->
+          <!--<li><a ng-href="#/about">About</a></li>-->
+          <!--<li><a ng-href="#">Contact</a></li>-->
+        <!--</ul>-->
+        <!--<h3 class="text-muted">easyHeat</h3>-->
+      <!--</div>-->
 
       <div ng-view=""></div>
 
-      <div class="footer">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
-      </div>
-    </div>
+      <!--<div class="footer">-->
+        <!--<p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>-->
+      <!--</div>-->
+    <!--</div>-->
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
